2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (print_type_decl): Honour HAVE_HSERVER.

2022-01-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-cmd-set.c (pk_cmd_set): Use `PRId64` instead of `ld`.

2022-01-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-cmd-def.c (PREP_REGEXP_PAYLOAD): Compare the string pointer
	with NULL, not '\0'.

2022-01-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* common/pk-utils.h (pk_print_binary): Add new param `use_suffix_p`.
	(pk_format_binary): Likewise.
	* common/pk-utils.c (pk_print_binary): Likewise.
	(pk_format_binary): Likewise.
	* libpoke/pvm-val.c (pvm_print_val_1): Update `pk_print_binary` usage.
	* libpoke/pvm.jitter (PVM_PRINTI): Likewise.
	(PVM_PRINTL): Likewise.
	(PVM_FORMATI): Likewise.
	(PVM_FORMATL): Likewise.
	* testsuite/poke.pkl/format-1.pk: Update test to reflect new behavior.
	* testsuite/poke.pkl/printf-binary-5.pk: New test.
	* testsuite/poke.pkl/printf-binary-6.pk: Likewise.
	* testsuite/poke.pkl/printf-binary-7.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Make `sizeof' and `typeof' calls primaries.

2022-01-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/ios-dev-sub.c (ios_dev_sub_handler_normalize): Fix error
	reporting.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.pk: New field `indent'.
	(Pk_Table.print_table): Use `indent'.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (pk_print_version): Update copyright year.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_pr_func): Add the name of the
	function to its type.
	* testsuite/poke.pkl/typeof-23.pk: New test.
	* testsuite/poke.pkl/typeof-24.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-01-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-env.c (_decl): Allow re-registering types.